# LibOrganic

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: expiring_secret.cpp  game_health.cpp  memory_corruption.cpp
include/: BitFlipStrategy.h  CorruptionStrategy.h  DecayManager.h  DriftStrategy.h  IDecayable.h  NullifyStrategy.h  Organic.h  RegenStrategy.h
src/: DecayManager.cpp  main  main.cpp
